--- a/apps/refPortal/.vscode/launch.json
+++ b/apps/refPortal/.vscode/launch.json
@@ -8,9 +8,11 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "env": {
+                "twilioSend": "False",
                 "fileVersion": "v4",
                 "MY_REFEREE_FILE": "./referees/",
                 "MY_CONFIG_FILE": "./config/",
+                "MY_DATA_FILE" : "./data/",
                 "MY_SECRET_FILE": "./secret/"
               }
        }
