--- a/apps/refPortal/.vscode/launch.json
+++ b/apps/refPortal/.vscode/launch.json
@@ -9,10 +9,19 @@
             "console": "integratedTerminal",
             "env": {
                 "logLevel": "INFO",
-                "twilioSend": "False",
-                "fileVersion": "v6",
+                "fileVersion": "v7",
                 "loadInterval": "500",
+                "twilioSend": "True",
                 "twilioServiceId": "MG7ec40f0e4baff9a172ad9e78cbc3d269",
+                "twilioFromMobile1": "+14155238886",
+                "twilioFromMobile": "+972533932474",
+                "twilioUseTemplate": "True",
+                "twilioUseFreeText": "True",
+                "twilioNewGameContentSid": "HXfdc62eb4cdf826bdf319aba859426def",
+                "sendGeneralReminder": "False",
+                "approveGames": "True",
+                "start24HoursWindowNotification": "True",
+                "browserHeadless": "True",
                 "MY_REFEREE_FILE": "./referees/",
                 "MY_CONFIG_FILE": "./config/",
                 "MY_DATA_FILE" : "./data/",
