--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ apps/refPortal/data/referees/reviews/
 apps/refPortal/.DS_Store
 apps/.DS_Store
 apps/refPortal/__pycache__/
+apps/.DS_Store
+apps/tzevaAdom/secret/
+
