add refAlert to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ apps/refPortal/CheerAppMaui.code-workspace
 apps/refPortal/secret/
 apps/refPortal/data/
 .DS_Store
+apps/TzevaAdom/redAlert
+apps/redAlert
